patchbay-gui/tests/ui/layout_engine_state_legacy_mark_dirty_removed.rs
use patchbay_gui::LayoutEngineState;

fn main() {
    let mut engine = LayoutEngineState::default();
    engine.mark_measure_dirty();
}
